--- a/cnnBox.ipynb
+++ b/cnnBox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,13 @@
     "\n",
     "\n",
     "class boxFilters(nn.Module):\n",
-    "    def __init__(self):\n",
+    "    def __init__(self,a,b,c,d):\n",
     "        super(boxFilters, self).__init__()\n",
     "        self.alpha = nn.Parameter(torch.tensor(1.0))\n",
-    "        self.a = nn.Parameter(torch.tensor(2.0))\n",
-    "        self.b = nn.Parameter(torch.tensor(3.0))\n",
-    "        self.c = nn.Parameter(torch.tensor(2.0))\n",
-    "        self.d = nn.Parameter(torch.tensor(6.0))\n",
+    "        self.a = nn.Parameter(torch.tensor(a))\n",
+    "        self.b = nn.Parameter(torch.tensor(b))\n",
+    "        self.c = nn.Parameter(torch.tensor(c))\n",
+    "        self.d = nn.Parameter(torch.tensor(d))\n",
     "    \n",
     "    def setAlpha(self,alpha):\n",
     "        self.alpha = alpha\n",
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,47 +56,287 @@
     "# Convolution using box filters (1 Integral Image, n box filters)\n",
     "# Need to write backprop for the forward pass \n",
     "class BoxFilterConvolution(nn.Module):\n",
-    "    def __init__(self, box_filters):\n",
+    "    def __init__(self, box_filters, ogFilterSize,reg,device):\n",
     "        super(BoxFilterConvolution, self).__init__()\n",
     "        self.box_filters = box_filters\n",
+    "        self.ogFilterSize = ogFilterSize\n",
+    "        self.reg = reg\n",
+    "        self.device = device\n",
+    "\n",
+    "    # def forward(self, integral_image):\n",
+    "        \n",
+    "    #     H, W = integral_image.shape[-2:]\n",
+    "\n",
+    "    #     H = H - self.ogFilterSize + 1\n",
+    "    #     W = W - self.ogFilterSize + 1\n",
+    "    #     output = torch.zeros((integral_image.shape[0],integral_image.shape[1],H,W)).to(self.device)\n",
+    "    #     for box_filter in self.box_filters:\n",
+    "    #         a, b, c, d = int(box_filter.a), int(box_filter.b), int(box_filter.c), int(box_filter.d)\n",
+    "    #         if b >= a and d >= c:  # Check if the box filter is valid\n",
+    "    #             # Compute the sum within the box filter for each position in the image\n",
+    "\n",
+    "    #           if(self.reg):\n",
+    "    #             print(\"Regular Conv\")  \n",
+    "    #             for i in range(H):\n",
+    "    #                 for j in range(W):\n",
+    "    #                     # Define the boundaries\n",
+    "                        \n",
+    "    #                     tlCol = j + a -1\n",
+    "    #                     tlRow = i + c -1\n",
+    "\n",
+    "    #                     trCol = j + b\n",
+    "    #                     trRow = i + c -1\n",
+    "\n",
+    "\n",
+    "    #                     blCol = j + a -1\n",
+    "    #                     blRow = i + d\n",
+    "\n",
+    "    #                     brCol = j + b\n",
+    "    #                     brRow = i + d\n",
+    "\n",
+    "    #                     #print(\"tlCol:\",tlCol,\"tlRow:\",tlRow,\"trCol:\",trCol,\"trRow:\",trRow,\"blCol:\",blCol,\"blRow:\",blRow,\"brCol:\",brCol,\"brRow:\",brRow)\n",
+    "    #                     # Get the sum within the boundaries and add it to the output\n",
+    "\n",
+    "    #                     if(tlRow>=0 and tlCol>=0):\n",
+    "    #                         tlVal = integral_image[..., tlRow, tlCol]\n",
+    "    #                     else:\n",
+    "    #                         tlVal = 0\n",
+    "                        \n",
+    "    #                     if(trRow>=0 and trCol>=0):\n",
+    "    #                         trVal = integral_image[..., trRow, trCol]\n",
+    "    #                     else:\n",
+    "    #                         trVal = 0\n",
+    "                        \n",
+    "    #                     if(blRow>=0 and blCol>=0):\n",
+    "    #                         blVal = integral_image[..., blRow, blCol]\n",
+    "    #                     else:\n",
+    "    #                         blVal = 0\n",
+    "                        \n",
+    "    #                     if(brRow>=0 and brCol>=0):\n",
+    "    #                         brVal = integral_image[..., brRow, brCol]\n",
+    "    #                     else:\n",
+    "    #                         brVal = 0\n",
+    "\n",
+    "                            \n",
+    "                        \n",
+    "\n",
+    "    #                     #print(integral_image[..., tlRow, tlCol])\n",
+    "    #                     output[..., i, j] += brVal  + tlVal - trVal - blVal\n",
+    "    #           else:\n",
+    "    #                 print(\"SIMD Conv\")\n",
+    "\n",
+    "    #                 # Define the boundaries\n",
+    "    #                 row_indices = torch.arange(H).unsqueeze(-1).to(self.device)\n",
+    "    #                 col_indices = torch.arange(W).to(self.device)\n",
+    "    #                 print(row_indices.shape,col_indices.shape)\n",
+    "    #                 tlCol = col_indices + a - 1\n",
+    "    #                 tlRow = row_indices + c - 1\n",
+    "\n",
+    "    #                 trCol = col_indices + b\n",
+    "    #                 trRow = tlRow  # trRow and tlRow are the same\n",
+    "\n",
+    "    #                 blCol = tlCol  # blCol and tlCol are the same\n",
+    "    #                 blRow = row_indices + d\n",
+    "\n",
+    "    #                 brCol = trCol  # brCol and trCol are the same\n",
+    "    #                 brRow = blRow  # brRow and blRow are the same\n",
+    "\n",
+    "    #                 # Get the values at the boundaries\n",
+    "                    \n",
+    "    #                 tlVal = torch.where((tlRow < 0) | (tlCol < 0), 0, integral_image[..., tlRow, tlCol])\n",
+    "    #                 trVal = torch.where((trRow < 0) | (trCol < 0), 0, integral_image[..., trRow, trCol])\n",
+    "    #                 blVal = torch.where((blRow < 0) | (blCol < 0), 0, integral_image[..., blRow, blCol])\n",
+    "    #                 brVal = torch.where((brRow < 0) | (brCol < 0), 0, integral_image[..., brRow, brCol])\n",
+    "\n",
+    "    #                 # Compute the output\n",
+    "    #                 output.add_(brVal + tlVal - trVal - blVal)  # in-place addition\n",
+    "\n",
+    "                        \n",
+    "            \n",
+    "    #             #print(f\"Invalid box filter: a={a}, b={b}, c={c}, d={d}\")\n",
+    "    #     return output\n",
     "\n",
     "    def forward(self, integral_image):\n",
-    "        output = torch.zeros_like(integral_image)\n",
+    "        \n",
     "        H, W = integral_image.shape[-2:]\n",
-    "        for box_filter in self.box_filters:\n",
-    "            a, b, c, d = int(box_filter.a), int(box_filter.b), int(box_filter.c), int(box_filter.d)\n",
-    "            if b >= a and d >= c:  # Check if the box filter is valid\n",
-    "                # Compute the sum within the box filter for each position in the image\n",
-    "                for i in range(H):\n",
-    "                    for j in range(W):\n",
-    "                        output[..., i, j] += integral_image[..., max(0, i+d-1):min(H, i+b), max(0, j+c-1):min(W, j+a)].sum()\n",
-    "            else:\n",
-    "                print(f\"Invalid box filter: a={a}, b={b}, c={c}, d={d}\")\n",
+    "\n",
+    "        H = H - self.ogFilterSize + 1\n",
+    "        W = W - self.ogFilterSize + 1\n",
+    "        #output = torch.zeros((integral_image.shape[0],integral_image.shape[1],H,W)).to(self.device)\n",
+    "        # Define the boundaries\n",
+    "        row_indices = torch.arange(H).unsqueeze(-1).unsqueeze(-1).to(self.device)  # shape: (H, 1, 1)\n",
+    "        col_indices = torch.arange(W).unsqueeze(-1).unsqueeze(0).to(self.device)  # shape: (1, W, 1)\n",
+    "        print(row_indices.shape,col_indices.shape)\n",
+    "        # a, b, c, d should be 1D tensors of shape (num_filters,)\n",
+    "        # reshape them to (1, 1, num_filters)\n",
+    "\n",
+    "        box_filters_tensor = torch.tensor([[int(box_filter.a), int(box_filter.b), int(box_filter.c), int(box_filter.d)] for box_filter in self.box_filters]).to(self.device)\n",
+    "        a, b, c, d = box_filters_tensor[:, 0], box_filters_tensor[:, 1], box_filters_tensor[:, 2], box_filters_tensor[:, 3]\n",
+    "        \n",
+    "        a, b, c, d = a.unsqueeze(0).unsqueeze(0), b.unsqueeze(0).unsqueeze(0), c.unsqueeze(0).unsqueeze(0), d.unsqueeze(0).unsqueeze(0)\n",
+    "        print(a.shape,b.shape,c.shape,d.shape)\n",
+    "        tlCol = col_indices + a - 1  # broadcasting happens here\n",
+    "        tlRow = row_indices + c - 1\n",
+    "\n",
+    "        trCol = col_indices + b\n",
+    "        trRow = tlRow  # trRow and tlRow are the same\n",
+    "\n",
+    "        blCol = tlCol  # blCol and tlCol are the same\n",
+    "        blRow = row_indices + d\n",
+    "\n",
+    "        brCol = trCol  # brCol and trCol are the same\n",
+    "        brRow = blRow  # brRow and blRow are the same\n",
+    "        print(tlCol.shape,tlRow.shape,trCol.shape,trRow.shape,blCol.shape,blRow.shape,brCol.shape,brRow.shape)\n",
+    "        # Get the values at the boundaries\n",
+    "        tlVal = torch.where((tlRow < 0) | (tlCol < 0), 0, integral_image[..., tlRow, tlCol])\n",
+    "        trVal = torch.where((trRow < 0) | (trCol < 0), 0, integral_image[..., trRow, trCol])\n",
+    "        blVal = torch.where((blRow < 0) | (blCol < 0), 0, integral_image[..., blRow, blCol])\n",
+    "        brVal = torch.where((brRow < 0) | (brCol < 0), 0, integral_image[..., brRow, brCol])\n",
+    "        print(brVal.shape,tlVal.shape,trVal.shape,blVal.shape)\n",
+    "        # Compute the output\n",
+    "        outp\n",
+    "        \n",
+    "        ut = brVal + tlVal - trVal - blVal  # in-place addition\n",
+    "        output = output.sum(dim=-1)\n",
     "        return output\n",
+    "        \n",
+    "\n",
     "\n",
     "\n",
     "# CNN Network with box filters\n",
     "class cnnBox(nn.Module):\n",
     "\n",
-    "    def __init__(self, nBoxes):\n",
+    "    def __init__(self, nBoxes,reg,device):\n",
     "        super(cnnBox, self).__init__()\n",
-    "        self.boxes = 10\n",
+    "        self.boxes = 4\n",
     "        \n",
-    "        self.boxes = nn.ModuleList([boxFilters() for _ in range(self.boxes)])\n",
-    "\n",
-    "        self.conv = BoxFilterConvolution(self.boxes)\n",
+    "        self.boxes = nn.ModuleList([boxFilters(0.0,1.0,0.0,1.0) for _ in range(self.boxes)])\n",
+    "        ogFilterSize = 3\n",
+    "        self.conv = BoxFilterConvolution(self.boxes,ogFilterSize,reg,device)\n",
     "        self.fc = nn.Linear(1024,128)\n",
     "            \n",
     "\n",
     "    def forward(self,x):\n",
     "        x = x.cumsum(dim=-2).cumsum(dim=-1)\n",
     "        x = self.conv(x)\n",
-    "        x = nn.Flatten()(x)\n",
-    "        x = self.fc(x)\n",
+    "        #x = nn.Flatten()(x)\n",
+    "        #x = self.fc(x)\n",
     "        return x\n",
     "        \n",
     "        \n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a = torch.randint(0,10,(1,1,256,256))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda:0\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import time\n",
+    "\n",
+    "# # Record the start time\n",
+    "\n",
+    "\n",
+    "# cBox = cnnBox(1,True,device)\n",
+    "# start_time = time.time()\n",
+    "\n",
+    "\n",
+    "# for i in range(1):\n",
+    "#     a = a.to(device)\n",
+    "#     x=cBox(a)\n",
+    "\n",
+    "# #print(x)\n",
+    "\n",
+    "# end_time = time.time()\n",
+    "\n",
+    "# # Calculate the time passed\n",
+    "# time_passed = end_time - start_time\n",
+    "\n",
+    "# print(f'Time passed: {time_passed/1} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import time\n",
+    "\n",
+    "# # Record the start time\n",
+    "# cBox = cnnBox(1,False,device)\n",
+    "# start_time = time.time()\n",
+    "\n",
+    "# a = a.to(device)\n",
+    "# for i in range(1):\n",
+    "#     x=cBox(a)\n",
+    "\n",
+    "# print(x)\n",
+    "# end_time = time.time()\n",
+    "\n",
+    "# # Calculate the time passed\n",
+    "# time_passed = end_time - start_time\n",
+    "\n",
+    "# print(f'Time passed: {time_passed/1} seconds')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time passed: 0.14020895957946777 seconds\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "\n",
+    "conv2 = nn.Conv2d(1, 1, 3, bias=False).to(device)\n",
+    "\n",
+    "a = torch.rand((1,1,256,256)).to(device)\n",
+    "a =a.to(device)\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for i in range(1):\n",
+    " conv2(a)\n",
+    "\n",
+    "end_time = time.time()\n",
+    "\n",
+    "print(f'Time passed: {(end_time - start_time)/1} seconds')"
    ]
   },
   {
